RESOLVED FIXED199536
Fix thread safety bug in WebResourceLoadStatisticsTelemetry::calculateAndSubmit()
https://bugs.webkit.org/show_bug.cgi?id=199536
Summary Fix thread safety bug in WebResourceLoadStatisticsTelemetry::calculateAndSubm...
Chris Dumez
Reported 2019-07-05 15:06:47 PDT
Fix thread safety bug in WebResourceLoadStatisticsTelemetry::calculateAndSubmit().
Attachments
Patch (3.96 KB, patch)
2019-07-05 15:08 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews210 for win-future (13.66 MB, application/zip)
2019-07-05 16:39 PDT, EWS Watchlist
no flags
Chris Dumez
Comment 1 2019-07-05 15:08:31 PDT
EWS Watchlist
Comment 2 2019-07-05 16:39:50 PDT
Comment on attachment 373543 [details] Patch Attachment 373543 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12671574 New failing tests: http/tests/misc/repeat-open-cancel.html
EWS Watchlist
Comment 3 2019-07-05 16:39:52 PDT
Created attachment 373553 [details] Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
WebKit Commit Bot
Comment 4 2019-07-05 17:33:50 PDT
Comment on attachment 373543 [details] Patch Clearing flags on attachment: 373543 Committed r247190: <https://trac.webkit.org/changeset/247190>
WebKit Commit Bot
Comment 5 2019-07-05 17:33:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-07-05 17:34:25 PDT
Note You need to log in before you can comment on or make changes to this bug.