Fix thread safety bug in WebResourceLoadStatisticsTelemetry::calculateAndSubmit() https://bugs.webkit.org/show_bug.cgi?id=199536

Reviewed by Youenn Fablet.

The resourceLoadStatisticsStore is an object that is created / used / destroyed on the background
queue. It is therefore not safe to create a WeakPtr for it and use that WeakPtr on the main thread.

* NetworkProcess/Classifier/WebResourceLoadStatisticsTelemetry.cpp:
(WebKit::WebResourceLoadStatisticsTelemetry::calculateAndSubmit):


Canonical link: https://commits.webkit.org/213449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247190 268f45cc-cd09-0410-ab3c-d52691b4dbfc